@@ -137,17 +137,12 @@
                 </configuration>
             </plugin>
 
-            <!-- Add required module for JAXB on Java 11+ -->
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>3.1.0</version>
                 <configuration>
                     <mainClass>conepurchase.ConePurchaseServer</mainClass>
-                    <arguments>
-                        <argument>--add-modules</argument>
-                        <argument>java.xml.bind</argument>
-                    </arguments>
                 </configuration>
             </plugin>
 
